--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,3 +24,25 @@ jobs:
       run: npm run test:unit
     - name: Display SoftUni Username
       run: echo "muki04"
+
+  ui-tests:
+    runs-on: ubuntu-latest
+    needs: build-unit-test
+
+    steps:
+    - name: Checkout the repository
+      uses: actions/checkout@v4
+    - name: Use Node.js version 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install the dependencies
+      run: npm install
+    - name: Install Playwright browsers
+      run: npx playwright install
+    - name: Start the application
+      run: npm start &
+    - name: Run UI tests
+      run: npm run test:ui
+
