--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,3 +46,14 @@ jobs:
     - name: Run UI tests
       run: npm run test:ui
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: ui-tests
+    steps:
+      - name: Deploy
+        uses: JorgeLNJunior/render-deploy@v1.4.4
+        with:
+            service_id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+            api_key: ${{ secrets.MY_RENDER_API_KEY }}
+            wait_deploy: true
+
